# weaver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: node.h  wordgraph.h
src/: node.cpp  wordgraph.cpp
